Fix save method to conditionally include optimizer and scheduler states; update matplotlib version constraint in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ gdown==5.1.0
 huggingface-hub==0.22.2
 imageio==2.34.0
 ipython==8.12.3
-matplotlib==3.3.1
+matplotlib<3.4
 mediapy==1.2.0
 moviepy==1.0.3
 numpy==1.21.2
@@ -14,4 +14,4 @@ scikit-learn==1.4.1.post1
 scipy==1.10.1
 tensorboard==2.16.2
 tokenizers==0.15.2
-transformers
+transformers==4.39.3
